src/objects/Loss_Verification_Inspections__c.object
<CustomObject>
    <description>Objects holds all information gathered through the Loss Verification process</description>
    <fields>
        <fullName>CBRA_Compliant__c</fullName>
        <label>CBRA Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contents_Verified_Loss__c</fullName>
        <description>Sum of amount from contents UP codes</description>
        <label>Contents Verified Loss</label>
        <summarizedField>UP_Codes__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>UP_Codes__c.UP_Code__c</field>
            <operation>equals</operation>
            <value>UP-01</value>
        </summaryFilterItems>
        <summaryForeignKey>UP_Codes__c.Loss_Verification__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Eligible_Physical_Loss_Contents_Motor__c</fullName>
        <formula>Uncompensated_loss_for_Contents_Motor__c - Over_Admin_Limit_for_Contents_Motor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Physical Loss Contents &amp; Motor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_Physical_Loss_for_Real_Estate__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Physical Loss for Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value_of_Land__c</fullName>
        <label>Fair Market Value of Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value_of_Structure__c</fullName>
        <label>Fair Market Value of Structure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the LV record with the appropriate Loan record</description>
        <inlineHelpText>Associates the LV record with the appropriate Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipName>Loss_Verification_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motor_Vehicle_Verified_Loss__c</fullName>
        <description>Sum of amount from motor vehicle UP codes</description>
        <label>Motor Vehicle Verified Loss</label>
        <summarizedField>UP_Codes__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>UP_Codes__c.UP_Code__c</field>
            <operation>equals</operation>
            <value>UP-02</value>
        </summaryFilterItems>
        <summaryForeignKey>UP_Codes__c.Loss_Verification__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OPA_Compliant__c</fullName>
        <label>OPA Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Over_Admin_Limit_for_Contents_Motor__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Admin Limit for Contents &amp; Motor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Admin_Limit_for_Real_Estate__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Admin Limit for Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Landscape_Limit_for_Real_Estate__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Landscape Limit for Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Sub_Type__c</fullName>
        <label>Property Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boats / Ships / Vessels</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>CO-OP</fullName>
                </value>
                <value>
                    <fullName>Manufactured Housing</fullName>
                </value>
                <value>
                    <fullName>Multi Family Unit</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Vacant Land</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home / Owner</fullName>
                </value>
                <value>
                    <fullName>Home / Renter</fullName>
                </value>
                <value>
                    <fullName>Boat (Not Registered with Coast Guard)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CO-OP</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Condo/Townhouse</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Homeowners Association</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Manufactured Home (Land Leased) - Repair</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Manufactured Home (Land Leased) - Replaced</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Manufactured Home (Land Owned) - Repair</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Manufactured Home (Land Owned) - Replace</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Real Estate (Contract for Deed)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Real Estate (Leased Land)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Real Estate (Owned)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Renter</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Vacant Land</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Vessel (Registered with Coast Guard)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Loss Verifications</relationshipLabel>
        <relationshipName>Loss_Verifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Verified_Loss__c</fullName>
        <description>Sum of amount from real estate UP codes</description>
        <label>Real Estate Verified Loss</label>
        <summarizedField>UP_Codes__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>UP_Codes__c.UP_Code__c</field>
            <operation>equals</operation>
            <value>UP-04, UP-09, UP-17, UP-18, UP-19, UP-20, UP-24, UP-25, UP-27, UP-28, UP-29, UP-41, UP-43, UP-44, UP-53, UP-55</value>
        </summaryFilterItems>
        <summaryForeignKey>UP_Codes__c.Loss_Verification__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Repair_or_Replace__c</fullName>
        <label>Repair or Replace</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rising_Water__c</fullName>
        <label>Rising Water</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctioned_Community__c</fullName>
        <label>Sanctioned Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Administrative_Limits__c</fullName>
        <description>Roll-up field used to calculate Total Eligible Physical loss. Not intended to display on page layout. Field SUMS all administrative limits (Real Estate, Landscape, and Content &amp; Motor Limits)</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Administrative Limits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fair_Market_Value__c</fullName>
        <formula>Fair_Market_Value_of_Land__c  +  Fair_Market_Value_of_Structure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Verified_Loss__c</fullName>
        <description>Sum of amounts from real estate, landscape, motor vehicle, and contents UP codes</description>
        <label>Total Verified Loss</label>
        <summarizedField>UP_Codes__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>UP_Codes__c.UP_Code__c</field>
            <operation>equals</operation>
            <value>UP-01, UP-02, UP-04, UP-09, UP-17, UP-18, UP-19, UP-20, UP-24, UP-25, UP-27, UP-28, UP-29, UP-41, UP-43, UP-44, UP-53, UP-55</value>
        </summaryFilterItems>
        <summaryForeignKey>UP_Codes__c.Loss_Verification__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncompensated_loss_for_Contents_Motor__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncompensated loss for Contents &amp; Motor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verified_Loss_for_Landscape__c</fullName>
        <label>Verified Loss for Landscape</label>
        <summarizedField>UP_Codes__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>UP_Codes__c.UP_Code__c</field>
            <operation>equals</operation>
            <value>UP-20</value>
        </summaryFilterItems>
        <summaryForeignKey>UP_Codes__c.Loss_Verification__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Loss Verification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loss Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loss Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>